# Projeto-OER

./: .gitignore  LICENSE  README.md  pyproject.toml
oer/: __init__.py  anchor_extractor.py  config.py  logger.py  main.py  material_extractor.py  overpotential_extractor.py  parser.py  pdf_reader.py  schemas.py  scraper.py  substrate_extractor.py  teste.py
output/: a.csv  limpeza.ipynb  oer_limpo.csv  oer_limpo_2.csv  oer_records.csv  oer_records_final.csv  oer_records_initial.csv
