[project]
name = "pivic"
version = "0.1.0"
description = "Deterministic OER data extraction pipeline from scientific PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.25.0",
    "requests>=2.32.0",
    "spacy>=3.8.0",
]

[project.scripts]
oer-pipeline = "oer.main:main"
